--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,28 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>SceibaNg</title>
+  <title>Sceiba</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script>
+    (function (window) {
+      window.__env = window.__env || {};
+      // API url
+      window.__env.sceibaApi = "https://sceiba-lab.upr.edu.cu/api/";
+
+      window.__env.cuorApi = "https://localhost:5001/api/";
+
+      // window.__env.cuorApi = "http://localhost:3000/";
+
+      window.__env.sceibaHost = "https://cuor-lab.upr.edu.cu/";
+
+      window.__env.oauthRedirectUri = "https://localhost:4200/";
+      window.__env.oauthClientId = "nCjpQ1p66vGwfbpHdixoBCh8QZBUGjntr7cj1ANB";
+      window.__env.oauthScope = "user:email";
+      window.__env.enableDebug = true;
+    })(this);
+  </script>
 </head>
 <body>
   <app-root></app-root>
