--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,8 @@
     (function (window) {
       window.__env = window.__env || {};
       // API url
-      window.__env.sceibaApi = "https://sceiba-lab.upr.edu.cu/api/";
+      window.__env.sceibaApi = "http://localhost:3000/";
+      //window.__env.sceibaApi = "https://sceiba-lab.upr.edu.cu/api/";
 
       window.__env.cuorApi = "https://localhost:5001/api/";
 
