update home component

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
 
       // window.__env.cuorApi = "http://localhost:3000/";
 
-      window.__env.sceibaHost = "https://cuor-lab.upr.edu.cu/";
+      window.__env.sceibaHost = "https://sceiba-lab.upr.edu.cu/";
 
       window.__env.oauthRedirectUri = "https://localhost:4200/";
       window.__env.oauthClientId = "nCjpQ1p66vGwfbpHdixoBCh8QZBUGjntr7cj1ANB";
